--- a/html/head.html
+++ b/html/head.html
@@ -8,15 +8,15 @@
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="A Puro Fútbol Online en VIVO y en directo" />
     <!-- favicon -->
-    <link rel="shortcut icon" href="https://apurofutbol.net/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://vivo.apurofutbol.net/favicon.png" type="image/x-icon">
     <!-- bootstrap -->
-    <link rel="stylesheet" href="https://apurofutbol.net/assets/css/bootstrap.css">
+    <link rel="stylesheet" href="https://vivo.apurofutbol.net/assets/css/bootstrap.css">
     <!-- stylesheet -->
-    <link rel="stylesheet" href="https://apurofutbol.net/assets/css/style.css?v4">
+    <link rel="stylesheet" href="https://vivo.apurofutbol.net/assets/css/style.css?v4">
     <!-- responsive -->
-    <link rel="stylesheet" href="https://apurofutbol.net/assets/css/responsive.css">
-   <link rel="stylesheet" href="https://apurofutbol.net/assets/css/canales.css?v20">
-<link rel="stylesheet" href="https://apurofutbol.net/assets/css/fontawesome.min.css">
+    <link rel="stylesheet" href="https://vivo.apurofutbol.net/assets/css/responsive.css">
+   <link rel="stylesheet" href="https://vivo.apurofutbol.net/assets/css/canales.css?v20">
+<link rel="stylesheet" href="https://vivo.apurofutbol.net/assets/css/fontawesome.min.css">
 
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-GKRPQ0KME2"></script>
