--- a/html/footer.html
+++ b/html/footer.html
@@ -1,58 +1,59 @@
          <!-- footer begin -->
-       <div class="footer" id="contact">
-            <div class="container">
-                <div class="row justify-content-between">
-                    <div class="col-xl-4 col-lg-5 col-md-10">
-                        <div class="about-widget">
-                            <a class="logo" href="index.html">
-                                <img src="https://apurofutbol.net/assets/img/logoapf.png" alt="logo" style="margin: 10px; width: 150px; filter: invert(1);">                            </a>
-                            
-                            <div class="social">
-                                <ul> 
-                                    <li>
-                                        <a href="https://www.tiktok.com/@apuro_futbol_ok" class="social-icon">
-                                            <i class="fa-brands fa-tiktok"></i>
-                                        </a>
-                                        <a href="https://twitter.com/apurofutbolnet" class="social-icon">
-                                            <i class="fab fa-twitter"></i>
-                                        </a>
-                                        <a href="https://www.youtube.com/@apurofutbol-yt" class="social-icon">
-                                            <i class="fab fa-youtube"></i>
-                                        </a>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-2 col-lg-2 col-md-3">
-                        <div class="useful-links">
-                            <h3>Links</h3>
-                            <ul>
-                                <li>
-                                    <a href="#">DMCA</a>
-                                </li>
-                                <li>
-                                    <a href="https://t.me/Apurofutbolnet">Contacto</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <br>
-        </div>
-        <!-- footer end -->
-        <!-- copyright footer begin -->
-        <div class="copyright-footer">
-            <div class="container">
-                <div class="row justify-content-between">
-                    <div class="col-xl-5 col-md-6 col-lg-6 d-lg-flex d-lg-flex d-block align-items-center">
-                        <p class="copyright-text">
-                            <a href="#">A Puro Fútbol 2023 © Todos los derechos reservados.</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- copyright footer end -->
+         <div class="footer" id="contact">
+          <div class="container">
+              <div class="row justify-content-between">
+                  <div class="col-xl-4 col-lg-5 col-md-10">
+                      <div class="about-widget">
+                          <a class="logo" href="index.html">
+                              <img src="https://vivo.apurofutbol.net/assets/img/logoapf.png" alt="logo" style="margin: 10px; width: 150px; filter: invert(1);">                            </a>
+                          
+                          <div class="social">
+                              <ul> 
+                                  <li>
+                                      <a href="https://www.tiktok.com/@apuro_futbol_ok" class="social-icon">
+                                          <i class="fa-brands fa-tiktok"></i>
+                                      </a>
+                                      <a href="https://twitter.com/apurofutbolnet" class="social-icon">
+                                          <i class="fab fa-twitter"></i>
+                                      </a>
+                                      <a href="https://www.youtube.com/@apurofutbol-yt" class="social-icon">
+                                          <i class="fab fa-youtube"></i>
+                                      </a>
+                                      </a>
+                                  </li>
+                              </ul>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col-xl-2 col-lg-2 col-md-3">
+                      <div class="useful-links">
+                          <h3>Links</h3>
+                          <ul>
+                              <li>
+                                  <a href="#">DMCA</a>
+                              </li>
+                              <li>
+                                  <a href="https://t.me/Apurofutbolnet">Contacto</a>
+                              </li>
+                          </ul>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <br>
+      </div>
+      <!-- footer end -->
+      <!-- copyright footer begin -->
+      <div class="copyright-footer">
+          <div class="container">
+              <div class="row justify-content-between">
+                  <div class="col-xl-5 col-md-6 col-lg-6 d-lg-flex d-lg-flex d-block align-items-center">
+                      <p class="copyright-text">
+                          <a href="#">A Puro Fútbol 2023 © Todos los derechos reservados.</a>
+                      </p>
+                  </div>
+              </div>
+          </div>
+      </div>
+      <!-- copyright footer end -->
+
