--- a/chat/chatsmart.html
+++ b/chat/chatsmart.html
@@ -87,7 +87,7 @@
 
         <div id="videoContainer">
             <!-- Aquí puedes mantener el chat original -->
-            <iframe id="chat_embed_original" style="width: 100%; height: 100%;" allowfullscreen="" src="https://www.twitch.tv/embed/elnuevoemperador/chat?darkpopout&amp;no-mobile-redirect=true&amp;parent=apurofutbol.net"></iframe>
+            <iframe id="chat_embed_original" style="width: 100%; height: 100%;" allowfullscreen="" src="https://www.twitch.tv/embed/elnuevoemperador/chat?darkpopout&amp;no-mobile-redirect=true&amp;parent=vivo.apurofutbol.net"></iframe>
         </div>
 
         <div id="chatContainer">
