--- a/html/header.html
+++ b/html/header.html
@@ -4,7 +4,7 @@
           <div class="row" bis_skin_checked="1">
               <div class="col-12 d-flex align-items-center">
                   <div class="logo" bis_skin_checked="1">
-                      <a href="https://vivo.apurofutbol.net/" bis_skin_checked="1">
+                      <a href="https://apurofutbol.net/" bis_skin_checked="1">
 <img src="https://vivo.apurofutbol.net/assets/img/logoapf.png" width="150" height="58" alt="logo" style="
 margin: 10px;
 width: 150px;
